[gd_scene load_steps=4 format=3 uid="uid://l4e311vb2rjt"]

[ext_resource type="Script" path="res://scripts/display/ActionMenu.gd" id="1_gfqu7"]
[ext_resource type="PackedScene" uid="uid://bfklnk42p7fce" path="res://scenes/display/TagListDisplay.tscn" id="2_tdi38"]
[ext_resource type="Script" path="res://scripts/display/ActionButton.gd" id="2_xqklk"]

[node name="ActionMenu" type="Control" node_paths=PackedStringArray("action_machine_container", "machine_purchase_button", "tag_list_display", "action_button", "supply_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gfqu7")
action_machine_container = NodePath("Control/ScrollContainer/ActionMachineContainer")
machine_purchase_button = NodePath("Control/PurchaseMachineButton")
tag_list_display = NodePath("TagListDisplay")
action_button = NodePath("ActionButton")
supply_container = NodePath("SupplyListScrollArea/SupplyListContainer")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
offset_right = 20.0
offset_bottom = 31.0
text = "X"

[node name="ActionButton" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 31.0
script = ExtResource("2_xqklk")

[node name="TagListDisplay" parent="." instance=ExtResource("2_tdi38")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 268.0
offset_top = 131.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="SupplyListScrollArea" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 38.0
offset_bottom = 122.0
grow_horizontal = 2

[node name="SupplyListContainer" type="HBoxContainer" parent="SupplyListScrollArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 132.0
offset_right = 260.0
offset_bottom = 116.0
grow_vertical = 2

[node name="PurchaseMachineButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 10.0
offset_right = 242.0
offset_bottom = 31.0
text = "Purchase Machine"

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionMachineContainer" type="FlowContainer" parent="Control/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4

[connection signal="pressed" from="CloseButton" to="." method="close"]
[connection signal="focus_entered" from="ActionButton" to="ActionButton" method="gain_focus"]
[connection signal="focus_exited" from="ActionButton" to="ActionButton" method="lose_focus"]
[connection signal="left_click" from="ActionButton" to="ActionButton" method="actuate"]
[connection signal="mouse_entered" from="ActionButton" to="ActionButton" method="set_filter"]
[connection signal="mouse_exited" from="ActionButton" to="ActionButton" method="unset_filter"]
[connection signal="focus_entered" from="Control/PurchaseMachineButton" to="." method="gain_focus_machine"]
[connection signal="focus_exited" from="Control/PurchaseMachineButton" to="." method="lose_focus"]
[connection signal="mouse_entered" from="Control/PurchaseMachineButton" to="." method="set_filter_machine"]
[connection signal="mouse_exited" from="Control/PurchaseMachineButton" to="." method="unset_filter"]
[connection signal="pressed" from="Control/PurchaseMachineButton" to="." method="attempt_machine_purchase"]
